--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -46,8 +46,7 @@
       height: 80px;
       margin-bottom: 15px;
       img {
-        width: auto;
-        max-width: 100%;
+        width: 30%;
         height: inherit;
       }
       .cart-item-info {
