--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -32,6 +32,10 @@
   right: 40px;
   z-index: 5;
   overflow: auto;
+  .empty{
+    font-size: 18px;
+    margin: 50px auto;
+  }
   ul {
     height: 240px;
     display: flex;
